<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="webarch.com.hablar.LoginController.Fragments.SignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etUsername"
                android:background="@android:color/transparent"
                android:paddingStart="10dp"
                android:inputType="text"
                android:hint="@string/username"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etRegId"
                android:background="@android:color/transparent"
                android:paddingStart="10dp"
                android:inputType="text"
                android:hint="@string/registration_id"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etEmail"
                android:background="@android:color/transparent"
                android:paddingStart="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/official_email"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etPassword"
                android:background="@android:color/transparent"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/btnRegister"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/register"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
